[gd_scene load_steps=3 format=3 uid="uid://cfksp4rdu3k3d"]

[ext_resource type="Script" uid="uid://dciyx8gdnfkoo" path="res://Scripts/assembly_buttons.gd" id="1_palyj"]
[ext_resource type="Texture2D" uid="uid://wb0i27qtaqo4" path="res://Art/icon.svg" id="2_h6bls"]

[node name="AssemblyButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_palyj")

[node name="UpButton" type="Sprite2D" parent="."]
position = Vector2(0, -80)
texture = ExtResource("2_h6bls")

[node name="DownButton" type="Sprite2D" parent="."]
position = Vector2(0, 80)
texture = ExtResource("2_h6bls")

[node name="RightButton" type="Sprite2D" parent="."]
position = Vector2(160, 80)
texture = ExtResource("2_h6bls")

[node name="LeftButton" type="Sprite2D" parent="."]
position = Vector2(-160, 80)
texture = ExtResource("2_h6bls")
